# dicom-app

./: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
release/: DICOM.App_3.0.0_x64_en-US.msi
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  commands.rs  dicom_processor.rs  file_scanner.rs  lib.rs  main.rs  models.rs
src-tauri/src/logic/: anonymize.rs  convert.rs  mod.rs  stats.rs  tags.rs  workflow.rs
src-tauri/src/models/: metadata.rs
src-tauri/src/utils/: discovery.rs  excel.rs  logging.rs  metadata_export.rs  mod.rs
src/components/: ExportFormatSelector.tsx  LogViewer.tsx  Navbar.tsx  ProgressLog.tsx  SelectInputFolder.tsx  SelectOutputFolder.tsx  StartConvert.tsx  StatsModal.tsx
src/pages/: App.tsx  HomePage.tsx  LogsPage.tsx  TagViewerDetailsPage.tsx  TagViewerPage.tsx  TestPage.tsx
