[package]
name = "dicom-app"
version = "3.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



# Force charls-sys to build in release mode even during dev
[profile.dev.package.charls-sys]
opt-level = 3
debug = false



[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dicom_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dicom = "0.9.0"
dicom-object = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image", "jpeg", "rle", "jpegxl", "charls", "deflate", "openjpeg-sys", "rayon"] }
dicom-transfer-syntax-registry = "0.9.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
owo-colors = "4.2.3"
nd_array = "0.1.0"
ndarray = "0.17.1"
image = "0.24"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
chrono = "0.4"
rayon = "1.11.0"
uuid = { version = "1.10.0", features = ["v4"] }
csv = "1.4.0"
